Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123932

qstorageinfo_linux.cpp:15:10: fatal error: linux/mount.h: No such file or directory

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.7.1, 6.8.0 FF
    • 6.7.0
    • Core: I/O
    • None
    • Linux/X11
    • 73003f3b4 (dev), 2626a5bf1 (6.7)

      6.7.0 does not build on conda forge centos7 image (6.6.3 was ok):

      2024-04-02T17:34:41.0237625Z [797/4308] Building CXX object qtbase/src/corelib/CMakeFiles/Core.dir/Unity/unity_5_cxx.cxx.o
      2024-04-02T17:34:41.0238684Z FAILED: qtbase/src/corelib/CMakeFiles/Core.dir/Unity/unity_5_cxx.cxx.o
      2024-04-02T17:34:41.0335472Z $BUILD_PREFIX/bin/x86_64-conda-linux-gnu-c++ -DBACKTRACE_HEADER=\"execinfo.h\" -DCore_EXPORTS -DELF_INTERPRETER=\"/lib64/ld-linux-x86-64.so.2\" -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_UP_TO=0x050000 -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_LEAN_HEADERS=1 -DQT_MOC_COMPAT -DQT_NO_AS_CONST -DQT_NO_CAST_TO_ASCII -DQT_NO_CONTEXTLESS_CONNECT -DQT_NO_DEBUG -DQT_NO_FOREACH -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QEXCHANGE -DQT_NO_QPAIR -DQT_NO_USING_NAMESPACE -DQT_TYPESAFE_FLAGS -DQT_USE_QSTRINGBUILDER -DQT_WARN_DEPRECATED_UP_TO=0x070000 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I$SRC_DIR/build/qtbase/src/corelib/Core_autogen/include -I$SRC_DIR/build/qtbase/include -I$SRC_DIR/build/qtbase/include/QtCore -I$SRC_DIR/qtbase/src/corelib -I$SRC_DIR/build/qtbase/src/corelib -I$SRC_DIR/build/qtbase/src/corelib/global -I$SRC_DIR/build/qtbase/src/corelib/kernel -I$SRC_DIR/qtbase/src/corelib/../3rdparty/tinycbor/src -I$SRC_DIR/build/qtbase/include/QtCore/6.7.0 -I$SRC_DIR/build/qtbase/include/QtCore/6.7.0/QtCore -I$SRC_DIR/qtbase/src/corelib/../3rdparty/forkfd -I$SRC_DIR/build/qtbase/src/corelib/.rcc -I$SRC_DIR/qtbase/mkspecs/linux-g++ -isystem $PREFIX/include/glib-2.0 -isystem $PREFIX/lib/glib-2.0/include -fvisibility-inlines-hidden -fmessage-length=0 -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -ffunction-sections -pipe -isystem $PREFIX/include -fdebug-prefix-map=$SRC_DIR=/usr/local/src/conda/qt6-main-6.7.0 -fdebug-prefix-map=$PREFIX=/usr/local/src/conda-prefix -DNDEBUG -O3 -std=c++17 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fexceptions -Wsuggest-override -MD -MT qtbase/src/corelib/CMakeFiles/Core.dir/Unity/unity_5_cxx.cxx.o -MF qtbase/src/corelib/CMakeFiles/Core.dir/Unity/unity_5_cxx.cxx.o.d -o qtbase/src/corelib/CMakeFiles/Core.dir/Unity/unity_5_cxx.cxx.o -c $SRC_DIR/build/qtbase/src/corelib/CMakeFiles/Core.dir/Unity/unity_5_cxx.cxx
      2024-04-02T17:34:41.0369077Z In file included from $SRC_DIR/build/qtbase/src/corelib/CMakeFiles/Core.dir/Unity/unity_5_cxx.cxx:82:
      2024-04-02T17:34:41.0369574Z $SRC_DIR/qtbase/src/corelib/io/qstorageinfo_linux.cpp:15:10: fatal error: linux/mount.h: No such file or directory
      2024-04-02T17:34:41.0369902Z 15 | #include <linux/mount.h>
      2024-04-02T17:34:41.0370796Z    |           ^~~~~~~~~~~~~~~
      2024-04-02T17:34:41.0371305Z compilation terminated.
      

      seems related to:
      https://github.com/qt/qtbase/commit/ea6abe583f8534495c3c43e2b6aab95742b102a3

      see also QTBUG-119328.

        For Gerrit Dashboard: QTBUG-123932
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            jschueller Julien Schueller
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes